# UdemyC

./: CMakeLists.txt  S7Exer10.c  S7Exer19.c  S7Exer9.c
S7/: S7Exer1.c  S7Exer10.c  S7Exer11.c  S7Exer12.c  S7Exer13.c  S7Exer14.c  S7Exer15.c  S7Exer15A.c  S7Exer16.c  S7Exer17.c  S7Exer18.c  S7Exer19.c  S7Exer2.c  S7Exer20.c  S7Exer3.c  S7Exer4.c  S7Exer5.c  S7Exer6.c  S7Exer7.c  S7Exer8.c  S7Exer9.c  matrizes.c  matrizes2.c  vectore1.c
